--- a/assets/css/article/art_pub.css
+++ b/assets/css/article/art_pub.css
@@ -26,3 +26,13 @@
   margin-bottom: 20px;
   overflow: hidden;
 }
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    padding: 15px;
+    background-color: #f2f3f5;
+}
